# PC-Store

./: .env.example  .gitignore  Dockerfile.backend  Makefile  alembic.ini  docker-compose.backend.yml  main.py  pyproject.toml
Backend/: Dockerfile.backend  main.py  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 1c5b63f0c030_.py  2213042a49ca_.py  52dc97b422d3_.py  8782f099951e_.py  e8f708d11cff_.py
Backend/app/models/: models.py
Backend/app/routing/: main_router.py  order_router.py  user_router.py
Frontend/: PCStore.sln
Frontend/PCStore/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  PCStore.csproj
alembic/: env.py
alembic/versions/: 2ebe713456f4_.py  30f49bc11334_.py  41c62eaa1d5d_.py  6acd41cd350a_.py  73803372c516_.py  78216a827a05_.py  7c7cf661c1a9_.py  9e01858204e7_.py  aa0450cdf281_.py  ae363ab0a478_.py  b1fc028dc898_.py  d54483cd48cd_.py  e0395abcb5ea_.py  e77a859696a7_.py  e918ad7066df_.py  fdbd7a871899_.py
app/database/: connector.py
app/models/: models.py
app/routing/: basket_router.py  main_router.py  order_router.py  search_router.py  user_router.py
app/security/: hasher.py  jwtmanager.py
app/services/: basket_service.py  order_service.py  search_service.py  user_authtorization.py  user_profile.py  user_register.py  user_schema.py  user_service.py
app/settings/: settings.py
app/utils/: articlesgen.py
database/: config.py
routing/: main_router.py  user_router.py
schemas/requests/: user_schema.py
services/: user_service.py
utils/: articlesgen.py
(+102 files in other folders)
